[package]
name = "fdb"
version = "0.1.0"
edition = "2021"

[features]
default = ["fdb-c/fdb_710"]
fdb_510 = ["fdb-c/fdb_510"]
fdb_520 = ["fdb-c/fdb_520"]
fdb_600 = ["fdb-c/fdb_600"]
fdb_610 = ["fdb-c/fdb_610"]
fdb_620 = ["fdb-c/fdb_620"]
fdb_630 = ["fdb-c/fdb_630"]
fdb_700 = ["fdb-c/fdb_700"]
fdb_710 = ["fdb-c/fdb_710"]
fdb_730 = ["fdb-c/fdb_730"]

[dependencies]
fdb-c = {path = "../fdb-c"  }
thiserror = "1.0"
log = "0.4.22"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3.5"