[package]
name = "fdb"
version = "0.1.0"
edition = "2021"

[features]
default = ["fdb-c/fdb_710"]
510 = ["fdb-c/fdb_510"]
520 = ["fdb-c/fdb_520"]
600 = ["fdb-c/fdb_600"]
610 = ["fdb-c/fdb_610"]
620 = ["fdb-c/fdb_620"]
630 = ["fdb-c/fdb_630"]
700 = ["fdb-c/fdb_700"]
710 = ["fdb-c/fdb_710"]
730 = ["fdb-c/fdb_730"]

[dependencies]
fdb-c = {path = "../fdb-c"  }
thiserror = "1.0"
log = "0.4.22"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3.5"