[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[dependencies]
fdb = { path = "../fdb", features = ["710"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
nom = { version = "7.1.3" }
num-bigint = "0.4"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1" }