[package]
name = "fdb"
version = "0.1.0"
edition = "2021"

[features]
510 = ["fdb-c/510"]
520 = ["fdb-c/520"]
600 = ["fdb-c/600"]
610 = ["fdb-c/610"]
620 = ["fdb-c/620"]
630 = ["fdb-c/630"]
700 = ["fdb-c/700"]
710 = ["fdb-c/710"]
730 = ["fdb-c/730"]

[dependencies]
fdb-c = {path = "../fdb-c"  }
thiserror = "1.0"
log = "0.4.22"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3.5"

[dev-dependencies]
fdb-c = { path = "../fdb-c", features = ["710"] }