[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[dependencies]
fdb = { path = "../fdb", features = ["710"] }
macro_derive = { path = "../macro_derive" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
nom = { version = "7.1.3" }
num-bigint = "0.4"
num-traits = "0.2.19"
serde = { features = ["derive"], path = "../../deps/serde/serde" }
thiserror = { version = "1" }
log = "0.4.22"

